<resources>
    <string name="app_name">Pew Pew</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="old_fashoined">Old fashoined</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="about">About</string>
    <string name="userId">User ID:</string>
    <string name="emailAddress">Email Address:</string>
    <string name="pewpew">Pew Pew</string>
    <string name="userinfo">User Information</string>
    <string name="restaddress">Restaurant Address</string>
    <string name="address">3160 Al Hussain Ibn Ali, At Taawun, Riyadh 12475</string>
    <string name="story">Story</string>
    <string name="story1">The Pew Pew Story</string>
    <string name="story1_1">"In 2020, Pew Pew founder Abdulrahman Al-Rasheed had the chance to bring his cooking skills to perfection at his kitchen in Riyadh and he didn’t hesitate. Together with his cousin Belal, he made his way across the pond to the big city. Inspired by the American style of food, they didn’t wait long and opened their first Pew Pew restaurant in January of 2021. Their mission was high quality food, fresh products and attention to detail. "</string>
    <string name="beef">Regional beef</string>
    <string name="story3">Our beef Pew Pew stands for two things: quality and regional origin. That’s why we offer 100% juicy beef. The cows spend their lifetime breathing the fresh air in the open countryside with more than enough space. By working together closely with our farmer we make sure our guests Pew Pew get the best beef there is. And you can definitely taste it!</string>
    <string name="story5">"We are extremely proud of our burger buns. Thanks to a homemade recipe by founder Abdulrahman Al-Rasheed, our guests at Pew Pew can enjoy the perfect buns, fluffy and tasty at the same time. "</string>
    <string name="bread">Housemade bread</string>
    <string name="so">Own sauce recipes</string>
    <string name="so1">Every burger Pew Pew provides a unique flavor. Main reasons are our delicious, homemade sauces. To make them, we of course only use fresh products, so we stick to our mission: to offer our guests the best quality possible. From our secret House Sauce to our daily fresh made guacamole, these sauces, combined with our beef and our buns, result in the unique taste of our burgers.</string>
    <string name="all">All</string>
    <string name="burgers">Burgers</string>
    <string name="sideorder">Side Order</string>
    <string name="addButton">Add to Cart</string>
    <string name="all1">All Menu</string>
    <string name="burgermenu">Burgers Menu</string>
    <string name="sideordermenu">Side Order Menu</string>
    <string name="createaccount">Create account</string>
    <string name="forgetpassword">Can\'t remember your password?</string>
    <string name="description">Description</string>
    <string name="cpass">Confirm Password</string>
    <string name="Forgerpass">Reset Your Password</string>
    <string name="respass">Reset Password</string>
    <string name="yourorders">Your Orders</string>
    <string name="profile">Profile</string>
    <string name="required">Required*</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
</resources>