<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="@drawable/splash"
    android:backgroundTint="#E6FFFFFF"
    android:backgroundTintMode="src_over"
    android:padding="10dp"
    tools:context=".view.main.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userinfo"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/ic_baseline_account_circle_24" />


            </LinearLayout>

            <TextView
                android:id="@+id/user_id_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userId"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/email_address_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emailAddress"
                android:textColor="#000000" />

            <View
                android:id="@+id/divider6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>